style.css
html, body
{
	width: 100%;
	height: 100%;
	margin: 0px;
	border: 0;
	overflow: hidden; /*  Disable scrollbars */
	display: block;  /* No floating content on sides */
}

canvas
{
	position: fixed;
	top: 0;
	left: 0;
	z-index: 1; 
}

#content
{
	position: relative;
	z-index: 2;
}

